{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 84,
  "lineage": "86c0f8a9-08b2-ea75-7c4b-68790d21ce19",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.1.1.50",
            "association_id": "eipassoc-0788e48f69cc7f508",
            "domain": "vpc",
            "id": "eipalloc-03e6667dc34965e6d",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-02739481074435058",
            "private_dns": "ip-10-1-1-50.ca-central-1.compute.internal",
            "private_ip": "10.1.1.50",
            "public_dns": "ec2-3-97-45-239.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.97.45.239",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.adeel-nic",
            "aws_security_group.allow_web",
            "aws_subnet.adeel_pub_1",
            "aws_vpc.adeel-terrafom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "adeel-webserver-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-043e33039f1a50a56",
            "arn": "arn:aws:ec2:ca-central-1:617301792465:instance/i-048d3c769307d501a",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048d3c769307d501a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "adeelKeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-02739481074435058"
              }
            ],
            "primary_network_interface_id": "eni-02739481074435058",
            "private_dns": "ip-10-1-1-50.ca-central-1.compute.internal",
            "private_ip": "10.1.1.50",
            "public_ip": "3.97.45.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-049f8ed4245162545",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bffc2b3a7f41835",
            "tags": {
              "Name": "Adeel-web-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d243ea0ddc1b2e3"
            ]
          },
          "dependencies": [
            "aws_network_interface.adeel-nic",
            "aws_security_group.allow_web",
            "aws_subnet.adeel_pub_1",
            "aws_vpc.adeel-terrafom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:617301792465:internet-gateway/igw-0db2e76a0aac88278",
            "id": "igw-0db2e76a0aac88278",
            "owner_id": "617301792465",
            "vpc_id": "vpc-0cd94024a04029676"
          },
          "dependencies": [
            "aws_vpc.adeel-terrafom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "adeel-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-02739481074435058",
            "ipv6_address_count": 0,
            "mac_address": "02:4c:88:72:e2:a4",
            "private_ip": "10.1.1.50",
            "private_ips": [
              "10.1.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09d243ea0ddc1b2e3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bffc2b3a7f41835"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.adeel_pub_1",
            "aws_vpc.adeel-terrafom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "adeel-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:617301792465:route-table/rtb-0bb395f3781bed318",
            "id": "rtb-0bb395f3781bed318",
            "owner_id": "617301792465",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db2e76a0aac88278",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db2e76a0aac88278",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "all-routes"
            },
            "vpc_id": "vpc-0cd94024a04029676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.adeel-terrafom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pubsubnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079513eef1920d708",
            "route_table_id": "rtb-0bb395f3781bed318",
            "subnet_id": "subnet-01bffc2b3a7f41835"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.adeel-rt",
            "aws_subnet.adeel_pub_1",
            "aws_vpc.adeel-terrafom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:617301792465:security-group/sg-09d243ea0ddc1b2e3",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d243ea0ddc1b2e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all Http Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all Https Traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ssh Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "617301792465",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd94024a04029676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.adeel-terrafom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "adeel_pub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:617301792465:subnet/subnet-01bffc2b3a7f41835",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-01bffc2b3a7f41835",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "617301792465",
            "tags": {
              "Name": "adeel-pub-subnet-1"
            },
            "tags_all": {
              "Name": "adeel-pub-subnet-1"
            },
            "vpc_id": "vpc-0cd94024a04029676"
          },
          "dependencies": [
            "aws_vpc.adeel-terrafom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "adeel-terrafom-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:617301792465:vpc/vpc-0cd94024a04029676",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0020ae54c30e33fa7",
            "default_route_table_id": "rtb-0b42daafeb346f218",
            "default_security_group_id": "sg-0f0601cf24ee289a1",
            "dhcp_options_id": "dopt-b3919ddb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cd94024a04029676",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b42daafeb346f218",
            "owner_id": "617301792465",
            "tags": {
              "type": "big"
            },
            "tags_all": {
              "type": "big"
            }
          }
        }
      ]
    }
  ]
}